feat: car controller
